# voice_assisstant

./: .gitignore  =3.8.0  DEPLOYMENT_GUIDE.md  DESIGN_PROCESS_IMPROVEMENTS.md  OPENAI_REALTIME_USAGE_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QWEN_TTS_USAGE_GUIDE.md  README.md  REALTIME_STT_USAGE.md  REPORT_DATA_UPDATE_SUMMARY.md  RIGOROUS_TESTING_GUIDE.md  TECHNICAL_IMPLEMENTATION_DETAILS.md  TEN_VAD_USAGE_GUIDE.md  TTS_PERFORMANCE_GUIDE.md  UWA_RAG_USAGE_GUIDE.md  assistant_memory.json  create_enhanced_figures.py  create_figures_4_5.py  create_report_figures.py  demo_rag_system.sh  figure_summary.py  install_ten_vad.sh  real_e2e_latency_test.py  rebuild.sh  rebuild_knowledge_base.py  rigorous_interruption_test.py  rigorous_latency_test.py  rigorous_test_manager.py  rigorous_wakeword_raw_20250929_031602.json  rigorous_wakeword_raw_20250929_032437.json  rigorous_wakeword_test.py  run_baseline_test.sh  run_pure_baseline_test.sh  run_short_baseline_test.sh  short_baseline_results_20250930_033709.json  short_baseline_results_20250930_033709_report.txt  start_llm_cn.sh  start_llm_rag.sh  (+17 more)
src/my_voice_assistant/: package.xml  requirements.txt  setup.cfg  setup.py
src/my_voice_assistant/my_voice_assistant/: add_new_knowledge.py  clear_knowledge_db.py  deepseek_llm_node.py  expand_knowledge_base.py  extended_uwa_tools.py  llm_node.py  llm_node_cn.py  manage_knowledge_base.py  openai_realtime_node.py  openai_stt_node.py  openai_tts_node.py  qwen_tts_node.py  realtime_llm_node.py  realtime_stt.py  realtime_stt_node.py  tts_node.py  (+7 more)
(+43 files in other folders)
